ui: fix image styling and remove footer overlap

--- a/app/assets/styles/partials/_elements.scss
+++ b/app/assets/styles/partials/_elements.scss
@@ -437,7 +437,7 @@ i {
   font-family: 'Catamaran', sans-serif;
   position: absolute;
   bottom: 5.2vh;
-  left: 46.5vw;
+  left: 47vw;
   font-size: 1.17vw;
   line-height: 1.9vw;
   letter-spacing: 0.8px;
